<resources>
    <string name="app_name">TrackingAccuracy</string>
    <string name="app_name_full">Tracking Accuracy</string>
    <string name="main_button_new">New route</string>
    <string name="main_button_straight_to_mapping">Return to live map</string>
    <string name="main_button_routes">View routes</string>
    <string name="main_button_backup">Backup data</string>
    <string name="button_about">About</string>
    <string name="about_activity_title">About application</string>
    <string name="about_map_title">Map used</string>
    <string name="about_graph_title">Graphs used</string>
    <string name="about_rdp_title">Ramer-Douglas-Peucker algorithm</string>
    <string name="about_activity_button_graph_licence">Licence for graph</string>
    <string name="about_activity_button_map_licence">Licence for map</string>
    <string name="about_activity_button_rdp_licence">Licence for Ramer-Douglas-Peucker</string>
    <string name="button_close">Close</string>
    <string name="starting_dialog_title">Route information</string>
    <string name="starting_dialog_name">Name</string>
    <string name="starting_dialog_description">Description</string>
    <string name="starting_dialog_button_start">Start</string>
    <string name="button_cancel">Cancel</string>
    <string name="mapping_button_stop">Stop recording locations</string>
    <string name="notification_content">Collecting locations to be represented on map</string>
    <string name="notification_channel_name">LocationTracker</string>
    <string name="notification_title">Tracking Accuracy location collecting</string>
    <string name="route_listing_title">Choose route for viewing</string>
    <string name="route_listing_spinner_title">Organize by</string>
    <string name="route_listing_rv_row_view_button">View</string>
    <string name="route_listing_rv_row_delete_button">Delete</string>
    <string name="route_listing_view_selected">View selected routes</string>
    <string-array name="route_listing_spinner_array">
        <item>date, newest first</item>
        <item>date, oldest first</item>
        <item>name, alphabetic</item>
        <item>name, reversed</item>
    </string-array>
    <string name="data_viewing_title">Route name: %1$s</string>
    <string name="data_viewing_bm_map_item">Map</string>
    <string name="data_viewing_bm_graph_item">Graphs</string>
    <string name="data_viewing_bm_numerical_item">Numerical</string>
    <string name="map_fragment_lengths_title">Lengths of shown paths:</string>
    <string name="map_fragment_lenths_listed">No routes selected</string>
    <string name="map_fragment_average_accuracies">Average acc: %1$f m</string>
    <string name="menu_fragment_title">Viewing options for map</string>
    <string name="menu_fragment_checkbox_accuracies">Show accuracies:</string>
    <string name="menu_fragment_select_route">Select route:</string>
    <string name="menu_fragment_checkbox_bearings">Show bearings:</string>
    <string name="menu_fragment_show_measured">0: Show measured locations:</string>
    <string name="menu_fragment_algorithm_title">Show calculated locations using:</string>
    <string name="menu_fragment_algorithm_1"> 1: Ramer-Douglas-Pecker</string>
    <string name="menu_fragment_epsilon_slider_title">Epsilon:</string>
    <string name="menu_fragment_algorithm_2">2: Kalman</string>
    <string name="menu_fragment_algorithm_3">3: Eliminate the least accurate</string>
    <string name="menu_fragment_accuracy_threshold_textview">Accuracy threshold</string>
    <string name="menu_fragment_locations_removed_textview">%1$d/%2$d of locations removed</string>
    <string name="menu_fragment_algorithm_4">4: Running averages</string>
    <string name="menu_fragment_algorithm_4_instructions">Average of locations (2–10)</string>
    <string name="menu_fragment_algorithm_4_hint">number</string>
    <string name="menu_fragment_use_weights_checkbox">Use weights</string>
    <string name="numerical_fragment_title">Numerical data of route</string>
    <string name="numerical_fragment_latitude_title">lat</string>
    <string name="numerical_fragment_longitude_title">lng</string>
    <string name="numerical_fragment_accuracy_title">acc(m)</string>
    <string name="numerical_fragment_bearing_title">bea(deg)</string>
    <string name="numerical_fragment_bearing_accuracy_title">bea_acc</string>
    <string name="graph_fragment_title">Select graph to show:</string>
    <string-array name="graph_option_listing_spinner_array">
        <item>time-distance</item>
        <item>time-speed</item>
        <item>distance-altitude</item>
    </string-array>
</resources>
