<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/menu_fragment_title_textview"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/menu_fragment_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu_fragment_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menu_fragment_measured_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_title_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu_fragment_show_measured_checkbox"
            android:text="@string/menu_fragment_show_measured"
            android:layout_margin="20dp"
            android:checked="true" />

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@color/colorMeasuredPolyline" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/menu_fragment_accuracies_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_fragment_checkbox_accuracies"
        android:layout_margin="20dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_fragment_measured_linear_layout" />

    <TextView
        android:id="@+id/menu_fragment_algorithm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_fragment_algorithm_title"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_accuracies_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_fragment_algorithm1_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_algorithm_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <CheckBox
            android:id="@+id/menu_fragment_algorithm_1_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_algorithm_1"
            android:layout_margin="20dp" />
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@color/colorAlgorithm1Polyline"/>

    </LinearLayout>

    <TextView
        android:id="@+id/menu_fragment_epsilon_slider_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_fragment_epsilon_slider_title"
        android:layout_marginTop= "20dp"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_algorithm1_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu_fragment_guideline"/>

    <TextView
        android:id="@+id/menu_fragment_epsilon_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="VALUE"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_algorithm1_linear_layout"
        app:layout_constraintStart_toEndOf="@id/menu_fragment_guideline"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menu_fragment_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <SeekBar
        android:id="@+id/menu_fragment_epsilon_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin ="20dp"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_epsilon_slider_title"
        android:max = "1000"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_fragment_algorithm2_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_epsilon_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <CheckBox
            android:id="@+id/menu_fragment_algorithm_2_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_algorithm_2"
            android:layout_margin="20dp"/>

        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/menu_fragment_algorithm1_color_view"
            android:layout_margin="20dp"
            android:background="@color/colorAlgorithm2Polyline"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_menu_algorithm3_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/menu_fragment_algorithm2_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <CheckBox
            android:id="@+id/menu_fragment_algorithm_3_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_fragment_algorithm_3"
            android:layout_margin="20dp" />
        <View
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@color/colorAlgorithm3Polyline"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>